Refactor tricks - Add a util method `Cards.extractStandardCardRanks` - Modify constructors to use `isXXXTrick` for assertions - Some tricks store effective rank of Phoenix card - Simplify `isXXXTrick` methods